--- a/CourseTracker.API/appsettings.json
+++ b/CourseTracker.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SQLConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CourseTracker-d55a4107-7953-4939-887d-caf7eacb7953;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
