Stub out Functional Cohesion namespace.

--- a/CourseTracker.UI/CourseTracker.UI.csproj
+++ b/CourseTracker.UI/CourseTracker.UI.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\CourseTracker.Domain\CourseTracker.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
