--- a/CourseTracker.UI/CourseTracker.UI.csproj
+++ b/CourseTracker.UI/CourseTracker.UI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CourseTracker.Domain\CourseTracker.Domain.csproj" />
+    <ProjectReference Include="..\CourseTracker.Application\CourseTracker.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
