--- a/CourseTracker.Application/CourseTracker.Application.csproj
+++ b/CourseTracker.Application/CourseTracker.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\CourseTracker.Domain\CourseTracker.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SchoolYear\Queries\" />
+  </ItemGroup>
+
 </Project>
