--- a/CourseTracker.Persistence/CourseTracker.Persistence.csproj
+++ b/CourseTracker.Persistence/CourseTracker.Persistence.csproj
@@ -37,4 +37,8 @@
     <ProjectReference Include="..\CourseTracker.Domain\CourseTracker.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
