--- a/CourseTracker.UI/CourseTracker.UI.csproj
+++ b/CourseTracker.UI/CourseTracker.UI.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.5" />
   </ItemGroup>
 
 </Project>
