Resolve SSL connction issues.

--- a/CourseTracker.Persistence/appsettings.json
+++ b/CourseTracker.Persistence/appsettings.json
@@ -1,5 +1,6 @@
 {
 	"ConnectionStrings": {
-		"SQLConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CourseTracker-d55a4107-7953-4939-887d-caf7eacb7953;Trusted_Connection=True;MultipleActiveResultSets=true"
+		//"SQLConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CourseTracker-d55a4107-7953-4939-887d-caf7eacb7953;Trusted_Connection=True;MultipleActiveResultSets=true",
+		"SQLConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CourseTracker-d55a4107-7953-4939-887d-caf7eacb7953;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
 	}
 }
