Add docker and docker compose support to API. Update connection string accordingly.

--- a/CourseTracker.Persistence/appsettings.json
+++ b/CourseTracker.Persistence/appsettings.json
@@ -1,7 +1,14 @@
 {
 	"ConnectionStrings": {
+
 		//"SQLConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CourseTracker-d55a4107-7953-4939-887d-caf7eacb7953;Trusted_Connection=True;MultipleActiveResultSets=true",
+
 		//"SQLConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CourseTracker-d55a4107-7953-4939-887d-caf7eacb7953;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-		"SQLConnectionString": "Server=DESKTOP-M8T8U9A;Database=CourseTracker;User Id=sa;Password='Password1!';MultipleActiveResultSets=true;Trust Server Certificate=True"
+
+		// SQL Server, no docker compose
+		//"SQLConnectionString": "Server=DESKTOP-M8T8U9A;Database=CourseTracker;User Id=sa;Password='Password1!';MultipleActiveResultSets=true;Trust Server Certificate=True" 
+
+		// SQL Server, with docker.
+		"SQLConnectionString": "Server=host.docker.internal;Database=CourseTracker;User Id=sa;Password='Password1!';MultipleActiveResultSets=true;Trust Server Certificate=True"
 	}
 }
