--- a/CourseTracker.UI/Dockerfile
+++ b/CourseTracker.UI/Dockerfile
@@ -4,25 +4,23 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
 EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["CourseTracker.API/CourseTracker.API.csproj", "CourseTracker.API/"]
+COPY ["CourseTracker.UI/CourseTracker.UI.csproj", "CourseTracker.UI/"]
 COPY ["CourseTracker.Application/CourseTracker.Application.csproj", "CourseTracker.Application/"]
 COPY ["CourseTracker.Domain/CourseTracker.Domain.csproj", "CourseTracker.Domain/"]
-COPY ["CourseTracker.Persistence/CourseTracker.Persistence.csproj", "CourseTracker.Persistence/"]
-RUN dotnet restore "./CourseTracker.API/CourseTracker.API.csproj"
+RUN dotnet restore "./CourseTracker.UI/CourseTracker.UI.csproj"
 COPY . .
-WORKDIR "/src/CourseTracker.API"
-RUN dotnet build "./CourseTracker.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/CourseTracker.UI"
+RUN dotnet build "./CourseTracker.UI.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./CourseTracker.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./CourseTracker.UI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "CourseTracker.API.dll"]
+ENTRYPOINT ["dotnet", "CourseTracker.UI.dll"]
