--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,23 @@ version: '3.4'
 
 services:
   coursetracker.api:
-    image: ${DOCKER_REGISTRY-}coursetrackerapi
+    # image: ${DOCKER_REGISTRY-}coursetrackerapi
     build:
       context: .
       dockerfile: CourseTracker.API/Dockerfile
+    environment:
+      - ASPNETCORE_URLS=http://*:5006
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "5006:5006"
+
+  coursetracker.ui:
+    # image: ${DOCKER_REGISTRY-}coursetrackerui
+    build:
+      context: .
+      dockerfile: CourseTracker.UI/Dockerfile
+    ports:
+      - "8081:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+
