--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,10 @@ services:
     build:
       context: .
       dockerfile: CourseTracker.UI/Dockerfile
-    ports:
-      - "8081:80"
     environment:
+      - ASPNETCORE_URLS=http://*:5005
       - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "5005:5005"
+    
 
