Handle connection string.

--- a/CourseTracker.Persistence/CourseTracker.Persistence.csproj
+++ b/CourseTracker.Persistence/CourseTracker.Persistence.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <StartupObject>CourseTracker.Persistence.Program</StartupObject>
+    <UserSecretsId>2d962d53-b40b-4229-9ab1-3671d497d7be</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,6 +29,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="NUnit" Version="4.1.0" />
   </ItemGroup>
