--- a/CourseTracker.Persistence/appsettings.json
+++ b/CourseTracker.Persistence/appsettings.json
@@ -1,6 +1,8 @@
 {
 	"ConnectionStrings": {
 
+		// look in secrets.json
+
 		//"SQLConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CourseTracker-d55a4107-7953-4939-887d-caf7eacb7953;Trusted_Connection=True;MultipleActiveResultSets=true",
 
 		//"SQLConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CourseTracker-d55a4107-7953-4939-887d-caf7eacb7953;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
@@ -9,6 +11,6 @@
 		//"SQLConnectionString": "Server=DESKTOP-M8T8U9A;Database=CourseTracker;User Id=sa;Password='Password1!';MultipleActiveResultSets=true;Trust Server Certificate=True" 
 
 		// SQL Server, with docker.
-		"SQLConnectionString": "Server=host.docker.internal;Database=CourseTracker;User Id=sa;Password='Password1!';MultipleActiveResultSets=true;Trust Server Certificate=True"
+		//"SQLConnectionString": "Server=host.docker.internal;Database=CourseTracker;User Id=sa;Password='Password1!';MultipleActiveResultSets=true;Trust Server Certificate=True"
 	}
 }
