--- a/CourseTracker.React/CourseTracker.React.Server/CourseTracker.React.Server.csproj
+++ b/CourseTracker.React/CourseTracker.React.Server/CourseTracker.React.Server.csproj
@@ -13,10 +13,16 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Scrutor" Version="4.2.2" />
+    <PackageReference Include="Scrutor.AspNetCore" Version="3.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CourseTracker.Application\CourseTracker.Application.csproj" />
+    <ProjectReference Include="..\..\CourseTracker.Domain\CourseTracker.Domain.csproj" />
+    <ProjectReference Include="..\..\CourseTracker.Persistence\CourseTracker.Persistence.csproj" />
     <ProjectReference Include="..\coursetracker.react.client\coursetracker.react.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
