--- a/CourseTracker.React1/CourseTracker.React1.Server/CourseTracker.React1.Server.csproj
+++ b/CourseTracker.React1/CourseTracker.React1.Server/CourseTracker.React1.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,7 +9,7 @@
     <DockerfileContext>..\..</DockerfileContext>
     <SpaRoot>..\coursetracker.react1.client</SpaRoot>
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
-    <SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
+    <SpaProxyServerUrl>https://localhost:4173</SpaProxyServerUrl>
   </PropertyGroup>
 
   <ItemGroup>
