--- a/CourseTracker.UI/appsettings.Development.json
+++ b/CourseTracker.UI/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
 
-  //"ApiUrl": "https://localhost:7100",
-  "ApiUrl": "http://host.docker.internal:5006",
+  "ApiUrl": "https://localhost:7100",
+  //"ApiUrl": "http://host.docker.internal:5006",
 
   "Logging": {
     "LogLevel": {
